--- a/index.html
+++ b/index.html
@@ -83,16 +83,74 @@
         </div>
       </div>
 
-      <div class="about_main container_green">
+      <section class="section_about">
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-12 text-center">
+         <h1>ABOUT</h1>
+       </div>
+     </div>
+     <div class="row">
+       <div class="col-lg-6">
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
+       </div>
+       <div class="col-lg-6">
+         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
+       </div>
+     </div>
+     <div class="row">
+       <div class="col-lg-12 text-center">
+         <h1>DOWNLOAD</h1>
+       </div>
+     </div>
+   </div>
+ </section>
+
+ <section class="section_conctact">
+   <div class="container">
+     <div class="row">
+       <div class="col-lg-12 text-center">
+         <h1>CONTACT ME</h1>
+       </div>
+     </div>
+     <div class="row">
+       <div class="col-lg-12">
+
+       </div>
+      </div>
+    </div>
+  </section>
+
+</main>
+
+<footer>
+  <section class="section_footer_1">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-lg-4">
+         <h3>LOCATION</h3>
+        </div>
+        <div class="col-lg-4">
+         <h3>AROUND THE WEB</h3>
+        </div>
+        <div class="col-lg-4">
+         <h3>ABOUT FREELANCER</h3>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section_footer_2">
+    <div class="container">
+      <div class="row text-center">
+        <div class="col-lg-12">
+          <p>Copyright</p>
+        </div>
 
       </div>
+    </div>
+  </section>
 
-
-    </main>
-
-    <footer>
-
-    </footer>
+</footer>
 
   </body>
 </html>
