--- a/index.html
+++ b/index.html
@@ -12,29 +12,44 @@
   <body>
 
     <header>
-      <div class="container">
-        <div class="header clearfix">
-          <nav class="margin_body">
-            <ul class="nav nav-pills pull-right">
-              <li role="presentation"><a href="#">PORTFOLIO</a></li>
-              <li role="presentation"><a href="#">ABOUT</a></li>
-              <li role="presentation"><a href="#">CONTACT</a></li>
+      <nav class="navbar navbar-default navbar-fixed-top container_blue">
+        <div class="container-fluid margin_body">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">START BOOTSTRAP</a>
+          </div>
+
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">PORTFOLIO</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">CONTACT</a></li>
             </ul>
-            <h3 class="text-muted">START BOOTSTRAP</h3>
-          </nav>
-        </div>
-      </div>
+          </div><!-- /.navbar-collapse -->
+
+        </div><!-- /.container-fluid -->
+      </nav>
     </header>
 
     <main>
 
-      <div class="top_main container_green">
+      <div class="top_main container_green mt_100">
         <div class="row">
           <div class="jumbotron">
-          <img src="img_profilo" alt="">      <!-- da mettere immagine profilo stilizzato -->
-          <h1>START BOOTSTRAP</h1>
-          <hr class="inline_block"><i class="fas fa-star"></i><hr class="inline_block">
-          <p class="">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+            <img id="img_profilo" src="assets/img/avatar.svg" alt="">      <!-- da mettere immagine profilo stilizzato -->
+            <h1>START BOOTSTRAP</h1>
+            <div class="container_stella">
+              <hr class="stella_inline_block">
+              <i class="fas fa-star"></i>
+              <hr class="stella_inline_block">
+            </div>
+            <p class="">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
           </div>
         </div>
       </div>
@@ -43,38 +58,40 @@
         <div class="margin_body">
           <div class="title_center_main text-center">
             <h2>PORTFOLIO</h2>
-            <hr class="inline_block"><i class="fas fa-star"></i><hr class="inline_block">
-          </div>
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="container_img">
-
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="container_img">
-
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div class="container_img">
-
-              </div>
+            <div class="container_stella color_blue">
+              <hr class="stella_inline_block">
+              <i class="fas fa-star"></i>
+              <hr class="stella_inline_block">
             </div>
           </div>
-
           <div class="row">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
               <div class="container_img">
 
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
               <div class="container_img">
 
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
+              <div class="container_img">
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
+              <div class="container_img">
+
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
+              <div class="container_img">
+
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
               <div class="container_img">
 
               </div>
@@ -84,73 +101,80 @@
       </div>
 
       <section class="section_about">
-   <div class="container">
-     <div class="row">
-       <div class="col-lg-12 text-center">
-         <h1>ABOUT</h1>
+       <div class="container">
+         <div class="margin_body">
+           <div class="row text-center">
+             <div class="col-lg-12 text-center mt_30 color_white">
+               <h1>ABOUT</h1>
+               <div class="container_stella">
+                 <hr class="stella_inline_block color_white">
+                 <i class="fas fa-star"></i>
+                 <hr class="stella_inline_block color_white">
+               </div>
+             </div>
+             <div class="col-lg-6 col-xs-12 text-left">
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
+             </div>
+             <div class="col-lg-6 col-xs-12 text-left">
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
+             </div>
+           </div>
+           <div class="row">
+             <div class="col-lg-12 text-center">
+               <h1>DOWNLOAD</h1>
+             </div>
+           </div>
+         </div>
        </div>
-     </div>
-     <div class="row">
-       <div class="col-lg-6">
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
-       </div>
-       <div class="col-lg-6">
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
-       </div>
-     </div>
-     <div class="row">
-       <div class="col-lg-12 text-center">
-         <h1>DOWNLOAD</h1>
-       </div>
-     </div>
-   </div>
- </section>
+     </section>
 
- <section class="section_conctact">
-   <div class="container">
-     <div class="row">
-       <div class="col-lg-12 text-center">
-         <h1>CONTACT ME</h1>
-       </div>
-     </div>
-     <div class="row">
-       <div class="col-lg-12">
+     <section class="section_conctact">
+       <div class="container">
+         <div class="row">
+           <div class="col-lg-12 text-center">
+             <h1>CONTACT ME</h1>
+           </div>
+         </div>
+         <div class="row">
+           <div class="col-lg-12">
 
-       </div>
-      </div>
-    </div>
-  </section>
-
-</main>
-
-<footer>
-  <section class="section_footer_1">
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-lg-4">
-         <h3>LOCATION</h3>
+           </div>
+          </div>
         </div>
-        <div class="col-lg-4">
-         <h3>AROUND THE WEB</h3>
-        </div>
-        <div class="col-lg-4">
-         <h3>ABOUT FREELANCER</h3>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section class="section_footer_2">
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-lg-12">
-          <p>Copyright</p>
-        </div>
+      </section>
 
-      </div>
-    </div>
-  </section>
+    </main>
 
-</footer>
+    <footer>
+      <section class="section_footer_1">
+        <div class="container">
+          <div class="margin_body">
+            <div class="row text-center">
+              <div class="col-lg-4">
+               <h3>LOCATION</h3>
+              </div>
+              <div class="col-lg-4">
+               <h3>AROUND THE WEB</h3>
+              </div>
+              <div class="col-lg-4">
+               <h3>ABOUT FREELANCER</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section_footer_2">
+        <div class="container">
+          <div class="row text-center">
+            <div class="col-lg-12">
+              <p>Copyright</p>
+            </div>
+
+          </div>
+        </div>
+      </section>
+
+    </footer>
 
   </body>
 </html>
