continuato fino al contact me

--- a/index.html
+++ b/index.html
@@ -105,40 +105,72 @@
          <div class="margin_body">
            <div class="row text-center">
              <div class="col-lg-12 text-center mt_30 color_white">
-               <h1>ABOUT</h1>
+                <h1 class="title_about">ABOUT</h1>
                <div class="container_stella">
                  <hr class="stella_inline_block color_white">
                  <i class="fas fa-star"></i>
                  <hr class="stella_inline_block color_white">
                </div>
              </div>
-             <div class="col-lg-6 col-xs-12 text-left">
+           </div>
+
+           <div class="row mt_30">
+             <div class="col-lg-6 col-xs-12 text-left color_white p_about">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
              </div>
-             <div class="col-lg-6 col-xs-12 text-left">
+             <div class="col-lg-6 col-xs-12 text-left color_white p_about">
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio ea ab aliquam, minus distinctio excepturi repudiandae ad tempora placeat mollitia.</p>
              </div>
            </div>
-           <div class="row">
+
+           <div class="row mt_30">
              <div class="col-lg-12 text-center">
-               <h1>DOWNLOAD</h1>
+              <button class="btn_inherit_border_white mt_30" type="button" name="download">
+                <span class="glyphicon glyphicon-download-alt" aria-hidden="true"> </span>
+                DOWNLOAD
+              </button>
              </div>
            </div>
          </div>
        </div>
      </section>
 
-     <section class="section_conctact">
-       <div class="container">
-         <div class="row">
-           <div class="col-lg-12 text-center">
-             <h1>CONTACT ME</h1>
-           </div>
-         </div>
-         <div class="row">
-           <div class="col-lg-12">
-
-           </div>
+      <section class="section_conctact">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <h1>CONTACT ME</h1>
+            </div>
+          </div>
+          <div class="row">
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox"> Remember me
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                  <button type="submit" class="btn btn-default">Sign in</button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </section>
