--- a/index.html
+++ b/index.html
@@ -139,35 +139,44 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12 text-center">
-              <h1>CONTACT ME</h1>
+              <h1 id="contact_me" >CONTACT ME</h1>
+              <div class="container_stella color_blue mb_30">
+                <hr class="stella_inline_block">
+                <i class="fas fa-star"></i>
+                <hr class="stella_inline_block">
+              </div>
             </div>
+
           </div>
           <div class="row">
-            <form class="form-horizontal">
+            <form class="form-horizontal margin_body">
               <div class="form-group">
-                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                <div class="col-lg-12">
+                  <input type="text" class="form-control" placeholder="Name">
                 </div>
               </div>
               <div class="form-group">
-                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                <div class="col-lg-12">
+                  <input type="email" class="form-control" id="inputEmail3" placeholder="Email Address">
                 </div>
               </div>
               <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <div class="checkbox">
-                    <label>
-                      <input type="checkbox"> Remember me
-                    </label>
-                  </div>
+                <div class="col-lg-12">
+                  <input type="text" class="form-control" placeholder="Phone Number">
                 </div>
               </div>
               <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-default">Sign in</button>
+                <div class="col-lg-12">
+                  <textarea class="form-control" placeholder="Message" ows="3"></textarea>
+                </div>
+              </div>
+
+
+
+
+              <div class="form-group">
+                <div class="col-lg-12">
+                  <button type="submit" class="btn btn-default btn_green mb_30">Send</button>
                 </div>
               </div>
             </form>
