manca solo overlay e sistemare footer respondive

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="center_main">
         <div class="margin_body">
           <div class="title_center_main text-center">
-            <h2>PORTFOLIO</h2>
+            <h2 id="portfolio">PORTFOLIO</h2>
             <div class="container_stella color_blue">
               <hr class="stella_inline_block">
               <i class="fas fa-star"></i>
@@ -66,34 +66,33 @@
           </div>
           <div class="row">
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div class="container_img">
-
+              <div class="contenitore_immagini">
+                <img class="container_img" src="assets/img/1.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div class="container_img">
-
+              <div>
+                <img class="container_img" src="assets/img/2.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div class="container_img">
-
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div class="container_img">
-
+              <div>
+                <img class="container_img" src="assets/img/3.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div class="container_img">
-
+              <div>
+                <img class="container_img" src="assets/img/4.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div class="container_img">
-
+              <div>
+                <img class="container_img" src="assets/img/5.png" alt="">
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
+              <div>
+                <img class="container_img" src="assets/img/6.png" alt="">
               </div>
             </div>
           </div>
@@ -155,25 +154,24 @@
                   <input type="text" class="form-control" placeholder="Name">
                 </div>
               </div>
+              <hr>
               <div class="form-group">
                 <div class="col-lg-12">
                   <input type="email" class="form-control" id="inputEmail3" placeholder="Email Address">
                 </div>
               </div>
+              <hr>
               <div class="form-group">
                 <div class="col-lg-12">
                   <input type="text" class="form-control" placeholder="Phone Number">
                 </div>
               </div>
+              <hr>
               <div class="form-group">
                 <div class="col-lg-12">
                   <textarea class="form-control" placeholder="Message" ows="3"></textarea>
                 </div>
               </div>
-
-
-
-
               <div class="form-group">
                 <div class="col-lg-12">
                   <button type="submit" class="btn btn-default btn_green mb_30">Send</button>
@@ -187,33 +185,45 @@
     </main>
 
     <footer>
-      <section class="section_footer_1">
-        <div class="container">
-          <div class="margin_body">
-            <div class="row text-center">
-              <div class="col-lg-4">
-               <h3>LOCATION</h3>
+      <div id="container_speciale_blu_chiaro" class="top_footer mt_100">
+        <div class="margin_body">
+          <div class="row color_white">
+            <div class="col-lg-4 col-xs-12">
+              <h3 class="mt_50 mb_30">LOCATION</h3>
+              <p>2215 Jhon Daniel Drive Clark, MO 54243</p>
+            </div>
+            <div class="col-lg-4 col-xs-12">
+              <h3 class="mt_50 mb_30">AROUND THE WEB</h3>
+              <div class="social">
+                <span class="decorazione_social">
+                  <i class="fab fa-facebook-f"></i>
+                </span>
+                <span class="decorazione_social">
+                  <i class="fab fa-google-plus-g"></i>
+                </span>
+                <span class="decorazione_social">
+                  <i class="fab fa-twitter"></i>
+                </span>
+                <span class="decorazione_social">
+                  <i class="fab fa-linkedin-in"></i>
+                </span>
               </div>
-              <div class="col-lg-4">
-               <h3>AROUND THE WEB</h3>
-              </div>
-              <div class="col-lg-4">
-               <h3>ABOUT FREELANCER</h3>
-              </div>
+            </div>
+            <div class="col-lg-4 col-xs-12">
+              <h3 class="mt_50 mb_30">ABOUT FREELANCER</h3>
+              <p>Freelance is a free to use, open source Boostrap theme created by <a>Star Boostrap</a>.</p>
             </div>
           </div>
         </div>
-      </section>
-      <section class="section_footer_2">
-        <div class="container">
-          <div class="row text-center">
-            <div class="col-lg-12">
-              <p>Copyright</p>
-            </div>
+      </div>
 
+      <div class="Bottom_footer">
+        <div id="container_speciale_blu_scuro">
+          <div class="margin_body color_white">
+            <p class="line_height_100"> Copyright &copy; Your Website 2019 </p>
           </div>
         </div>
-      </section>
+      </div>
 
     </footer>
 
