--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
               <div class="contenitore_immagini">
+                <!-- da capire come mettere l overlay -->
                 <img class="container_img" src="assets/img/1.png" alt="">
               </div>
             </div>
