--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
               <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="#">START BOOTSTRAP</a>
           </div>
@@ -67,32 +67,49 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
               <div class="contenitore_immagini">
-                <!-- da capire come mettere l overlay -->
+                <div class="overlay">
+                  <div class="plus_box"> <i class="fas fa-plus"></i> </div>
+                </div>
                 <img class="container_img" src="assets/img/1.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div>
+              <div class="contenitore_immagini">
+                <div class="overlay">
+                  <div class="plus_box"> <i class="fas fa-plus"></i> </div>
+                </div>
                 <img class="container_img" src="assets/img/2.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div>
+              <div class="contenitore_immagini">
+                <div class="overlay">
+                  <div class="plus_box"> <i class="fas fa-plus"></i> </div>
+                </div>
                 <img class="container_img" src="assets/img/3.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div>
+              <div class="contenitore_immagini">
+                <div class="overlay">
+                  <div class="plus_box"> <i class="fas fa-plus"></i> </div>
+                </div>
                 <img class="container_img" src="assets/img/4.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div>
+              <div class="contenitore_immagini">
+                <div class="overlay">
+                  <div class="plus_box"> <i class="fas fa-plus"></i> </div>
+                </div>
                 <img class="container_img" src="assets/img/5.png" alt="">
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-xs-12 mt_30">
-              <div>
+              <div class="contenitore_immagini">
+                <div class="overlay">
+                  <div class="plus_box"> <i class="fas fa-plus"></i> </div>
+                </div>
                 <img class="container_img" src="assets/img/6.png" alt="">
               </div>
             </div>
